--- a/Views/FrontPage.xaml
+++ b/Views/FrontPage.xaml
@@ -17,7 +17,7 @@
             <Setter Property="Margin" Value="5" />
         </Style>
         <Style TargetType="FontIcon">
-            <Setter Property="FontSize" Value="30" />
+            <Setter Property="FontSize" Value="90" />
             <Setter Property="Margin" Value="0,0,0,10" />
         </Style>
     </Page.Resources>
@@ -31,8 +31,9 @@
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
             <Button Command="{x:Bind ViewModel.NavigateToStoryPageCommand}">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE12F;" />
-                    <TextBlock Text="查看游戏剧情" />
+                    <!--<FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE12F;" />-->
+                    <Image Source="{x:Bind ViewModel.TapeImage,Mode=OneWay}" Height="90" Width="90"/>
+                    <TextBlock Text="查看游戏剧情" Margin="0,10,0,0"/>
                 </StackPanel>
             </Button>
             <Button Command="{x:Bind ViewModel.NavigateToOperatorsCommand}">
