--- a/Views/OperatorLists.xaml
+++ b/Views/OperatorLists.xaml
@@ -2,6 +2,7 @@
     x:Class="ArknightsToolkit.Views.OperatorLists"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helper="using:ArknightsToolkit.Helper"
     xmlns:local="using:ArknightsToolkit.Views"
@@ -13,6 +14,7 @@
     mc:Ignorable="d">
     <Page.Resources>
         <helper:CodenameToBitmapImageConverter x:Key="CodenameToBitmapImage" />
+        <helper:OperatorClassToBitmapImageConverter x:Key="OperatorClassToBitmapImage" />
         <RatingItemImageInfo x:Key="OperatorStar" Image="/Assets/ui-star.png" />
         <Style x:Key="BaseTextBlockStyle" TargetType="TextBlock">
             <Setter Property="FontFamily" Value="XamlAutoFontFamily" />
@@ -23,13 +25,11 @@
             <Setter Property="LineStackingStrategy" Value="MaxHeight" />
             <Setter Property="TextLineBounds" Value="Full" />
         </Style>
-        <Style
-            x:Key="CaptionTextBlockStyle"
-            BasedOn="{StaticResource BaseTextBlockStyle}"
-            TargetType="TextBlock">
+        <Style x:Key="CaptionTextBlockStyle" BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock">
             <Setter Property="FontSize" Value="12" />
             <Setter Property="FontWeight" Value="Normal" />
         </Style>
+        <!--#region OperatorRatingStyle-->
         <Style x:Key="OperatorRatingControlStyle" TargetType="RatingControl">
             <Setter Property="Height" Value="32" />
             <Setter Property="Foreground" Value="{ThemeResource RatingControlCaptionForeground}" />
@@ -40,10 +40,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="RatingControl">
                         <Grid x:Name="LayoutRoot">
-                            <StackPanel
-                                Grid.Row="0"
-                                Margin="-20,-20,-20,-20"
-                                Orientation="Horizontal">
+                            <StackPanel Grid.Row="0" Margin="-20,-20,-20,-20" Orientation="Horizontal">
                                 <StackPanel
                                     x:Name="RatingBackgroundStackPanel"
                                     Margin="20,20,0,20"
@@ -61,10 +58,7 @@
                                     Text="{TemplateBinding Caption}"
                                     TextLineBounds="TrimToBaseline" />
                             </StackPanel>
-                            <ContentPresenter
-                                x:Name="ForegroundContentPresenter"
-                                Grid.Row="0"
-                                IsHitTestVisible="False">
+                            <ContentPresenter x:Name="ForegroundContentPresenter" Grid.Row="0" IsHitTestVisible="False">
                                 <StackPanel Margin="-40,-40,-40,-40" Orientation="Horizontal">
                                     <StackPanel
                                         x:Name="RatingForegroundStackPanel"
@@ -112,37 +106,81 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <!--#endregion-->
     </Page.Resources>
 
 
     <Grid>
         <Grid.Background>
-            <ImageBrush
-                ImageSource="{x:Bind ViewModel.BackgroundImage, Mode=OneWay}"
-                Opacity="0.6"
-                Stretch="UniformToFill" />
+            <ImageBrush ImageSource="{x:Bind ViewModel.BackgroundImage, Mode=OneWay}" Opacity="0.6" Stretch="UniformToFill" />
         </Grid.Background>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock
-            Grid.Row="0"
-            Margin="11,0,0,0"
-            Style="{StaticResource HeaderTextBlockStyle}"
-            Text="干员图鉴" />
+
+        <StackPanel Grid.Row="0" Margin="11,0,0,0">
+            <TextBlock RequestedTheme="Dark" Style="{StaticResource HeaderTextBlockStyle}" Text="干员图鉴" />
+            <TextBlock
+                PointerEntered="TextBlock_PointerEntered"
+                PointerExited="TextBlock_PointerExited"
+                FontSize="15"
+                FontWeight="Light"
+                Style="{StaticResource CaptionTextBlockStyle}"
+                Text="我曾对一个人许下这个誓言。一个对我来说最神圣的誓言。" />
+        </StackPanel>
+
+        <Image x:Name="AmiyaBackgroundImage" Grid.RowSpan="3" Stretch="Uniform" Height="100" Width="80" HorizontalAlignment="Right" VerticalAlignment="Top" Source="{x:Bind ViewModel.AmiyaBackground}" Opacity="0">
+            <Image.Resources>
+                <Storyboard x:Name="InAmiyaBackgroundStoryboard">
+                    <DoubleAnimation Duration="0:0:0.3" To="0.15" Storyboard.TargetName="AmiyaBackgroundImage" Storyboard.TargetProperty="(UIElement.Opacity)"/>
+                </Storyboard>
+                <Storyboard x:Name="OutAmiyaBackgroundStoryboard">
+                    <DoubleAnimation Duration="0:0:0.3" To="0" Storyboard.TargetName="AmiyaBackgroundImage" Storyboard.TargetProperty="(UIElement.Opacity)"/>
+                </Storyboard>
+            </Image.Resources>
+            
+            <Image.RenderTransform>
+                <TranslateTransform/>
+            </Image.RenderTransform>
+        </Image>
+
         <GridView
+            x:Name="OperatorListGridView"
             Grid.Row="1"
             Margin="11,10,0,0"
+            animations:ItemsReorderAnimation.Duration="00:00:0.5"
             ItemsSource="{x:Bind ViewModel.OperatorsList, Mode=OneWay}">
+
+            <GridView.RenderTransform>
+                <TranslateTransform />
+            </GridView.RenderTransform>
+
+            <GridView.Triggers>
+                <EventTrigger>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="OperatorListGridView" Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)">
+                                <SplineDoubleKeyFrame KeyTime="0:0:0" Value="-500" />
+                                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0">
+                                    <SplineDoubleKeyFrame.KeySpline>
+                                        <KeySpline ControlPoint1="0,1" ControlPoint2="0,1" />
+                                    </SplineDoubleKeyFrame.KeySpline>
+                                </SplineDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </GridView.Triggers>
+
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="model:Operators">
-                    <Grid Width="200" Height="250">
+                    <Grid Width="200" Height="250" Padding="10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
                             <RowDefinition />
-                            <RowDefinition Height="20" />
+                            <RowDefinition Height="30" />
                         </Grid.RowDefinitions>
 
                         <RatingControl
@@ -156,7 +194,22 @@
                             VerticalAlignment="Center"
                             Source="{x:Bind ImageCodename, Mode=OneWay, Converter={StaticResource CodenameToBitmapImage}}"
                             Stretch="Uniform" />
-                        <TextBlock Grid.Row="2" Text="{x:Bind Name}" />
+
+                        <Grid Grid.Row="2">
+                            <TextBlock
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center"
+                                FontSize="15"
+                                RequestedTheme="Dark"
+                                Style="{StaticResource BaseTextBlockStyle}"
+                                Text="{x:Bind Name}" />
+                            <Image
+                                Width="30"
+                                Height="30"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                Source="{x:Bind OperatorClass, Converter={StaticResource OperatorClassToBitmapImage}}" />
+                        </Grid>
                     </Grid>
                 </DataTemplate>
             </GridView.ItemTemplate>
